--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,3 +1,5 @@
+version: "3.1"
+
 rules:
  - rule: alteracao loop
    steps:
@@ -8,3 +10,8 @@ rules:
    steps:
    - intent: cumprimenta
    - action: utter_como_ajudar
+
+ - rule: sabor pizza
+   steps:
+   - intent: pergunta_sabor
+   - action: utter_resposta_sabor
