--- a/data/rules.yml
+++ b/data/rules.yml
@@ -1,1 +1,17 @@
 version: "3.1"
+
+rules:
+ - rule: cumprimenta cliente
+   steps:
+   - intent: cumprimenta
+   - action: utter_como_ajudar
+
+ - rule: sabor pizza
+   steps:
+   - intent: pergunta_sabor
+   - action: utter_resposta_sabor
+
+ - rule: pergunta se pode fazer pedido
+   steps:
+   - intent: fazer_pedido
+   - action: utter_pergunta_pedido
